test/syc/good/initstrsz.c
/*
 * String literals as initializers, array size determined by initializer
 */

char a[] = "Hello!";

int wa[] = L"Hello!";
