test/syc/bad/initialstr.c
/*
 * Cannot initialize array of int from string/
 */

int a[10] = "Hello!";
